# Parallel-RL-for-Automated-Pen-Testing

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  vulnerabilty_env.cu
CyberBattle_Implementation/: CudaNetworkEnv.cpp  CudaNetworkEnv.hpp  CyberBattleEnv.cpp  CyberBattleEnv.hpp  HybridEnv.cpp  HybridEnv.hpp  IEnv.hpp  Makefile  TabularQLearning.cpp  TabularQLearning.hpp  VulnerabilityAnalyzer.cpp  VulnerabilityAnalyzer.hpp  analyze_vulnerabilities.cpp  cuda_kernels.cu  main.cpp
include/: data_structures.h
src/CPU/environment/: pentest_env.cpp  pentest_env.h
src/CPU/queues/: data_structures.h  request_queue.cpp  request_queue.h  response_queue.cpp  response_queue.h
src/CPU/worker thread module/: worker_thread.h
src/CPU/worker threads/: worker_thread.cpp  worker_thread.h
src/CPU/worker_threads/: worker_thread.cpp
src/environment/: pentest_env.cpp  pentest_env.h
tests/: test_env.cpp  test_queues.cpp  test_worker_threads.cpp
